# wasm-split-prototype

crates/wasm_split_cli/src/: split_point.rs
integration/: Cargo.toml
integration/no_op/: Cargo.toml
integration/no_op/src/: lib.rs
