# This is a separate workspace to facilitate better integration testing.
# One workspace would force unification of crate features (and versions)
# with the dependencies of the splitting tool itself.
[workspace]
members = [
    "simple",
    "many_shares",
    "callback-in-split",
    "optimize_splits",
    "no_op",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
wasm_split_helpers = { path = "../crates/wasm_split", version = "0.2.0" }
wasm-bindgen = "=0.2.125"
wasm-bindgen-futures = "0.4.55"
wasm-bindgen-test = "0.3.55"
tokio = { version = "1.48", features = ["rt", "macros"] }
